--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 language: c
-before_install
+before_install:
   - sudo apt-get -qq update
   - sudo apt-get -y install libisofs-dev
 script: ./configure && make && make check
