--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 sudo: required
 language: c
-os:
-  - linux
-  - osx
-osx_image: xcode6.4
+matrix:
+  include:
+    - os: linux
+      dist: xenial
+    - os: osx
+      osx_image: xcode7.2
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then sudo apt-get -qq update; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; sudo apt-get -y install libgtk2.0-dev libisofs-dev mesa-common-dev libgl1-mesa-dev; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -y install libgtk2.0-dev libisofs-dev mesa-common-dev libgl1-mesa-dev; fi
 script: ./configure && make && make check
