--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ matrix:
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -y install libgtk2.0-dev libisofs-dev mesa-common-dev libgl1-mesa-dev; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install glib; fi
 script: ./configure && make && make check
