--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 sudo: required
 language: c
+matrix:
+  include:
+    - os: linux
+      dist: xenial
+    - os: osx
+      osx_image: xcode7.2
+
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get -y install libgtk2.0-dev libisofs-dev mesa-common-dev libgl1-mesa-dev
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -y install libgtk2.0-dev libisofs-dev mesa-common-dev libgl1-mesa-dev; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install glib lxdream/lxdream/libisofs; fi
 script: ./configure && make && make check
